--- a/goledger-challenge/package.json
+++ b/goledger-challenge/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "next": "^10.0.0",
+    "node-sass": "^5.0.0",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.3"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
