--- a/goledger-challenge/package.json
+++ b/goledger-challenge/package.json
@@ -14,7 +14,8 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
