--- a/goledger-challenge/package.json
+++ b/goledger-challenge/package.json
@@ -15,6 +15,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.8.3",
+    "react-icons": "^4.2.0",
+    "react-toastify": "^7.0.3",
     "styled-components": "^5.2.3",
     "swr": "^0.5.5"
   },
